// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remediation-instructions-filters Renders \`remediation-instructions-filters\` with custom props 1`] = `
<div
  class="v-list__group"
>
  <div
    class="v-list__group__header"
  >
    <div
      role="listitem"
    >
      <div
        class="v-list__tile theme--light"
      >
        Instructions filters
      </div>
    </div>
    <div
      class="v-list__group__header__append-icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <transition-stub
    mode="in-out"
    name="expand-transition"
  >
    <div
      class="v-list__group__items"
      style="display: none;"
    >
      <div
        class="container"
      >
        <div
          class="layout row wrap"
        >
          <remediation-instructions-filters-list-stub
            closable="true"
            editable="true"
            filters="[object Object]"
          />
        </div>
        <div
          class="layout row wrap"
        >
          <button
            class="ml-1 v-btn theme--light primary"
            type="button"
          >
            <div
              class="v-btn__content"
            >
              Add
            </div>
          </button>
        </div>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`remediation-instructions-filters Renders \`remediation-instructions-filters\` with default props 1`] = `
<div
  class="v-list__group"
>
  <div
    class="v-list__group__header"
  >
    <div
      role="listitem"
    >
      <div
        class="v-list__tile theme--light"
      >
        Instructions filters
      </div>
    </div>
    <div
      class="v-list__group__header__append-icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <transition-stub
    mode="in-out"
    name="expand-transition"
  >
    <div
      class="v-list__group__items"
      style="display: none;"
    >
      <div
        class="container"
      >
        <div
          class="layout row wrap"
        >
          <remediation-instructions-filters-list-stub
            filters=""
          />
        </div>
        <!---->
      </div>
    </div>
  </transition-stub>
</div>
`;
